# rust-mumble-protocol

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: echo_client.rs
protos/: MumbleWithWebRTC.proto
src/: control.rs  crypt.rs  lib.rs  ping.rs  varint.rs  voice.rs
